<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielacedo.tema1.Ejercicio5Activity">

    <TextView
        android:text="@string/txv_Euros_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/txv_Euros"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/nada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_InfoDivisa"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_ActualizarRatio"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/edt_Dolares"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <RadioButton
            android:text="@string/rbt_DolaresAEuros_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_DolaresAEuros"
            android:textSize="20sp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rbt_EurosADolares_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbt_EurosADolares"
            android:textSize="20sp"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/btn_Convertir_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Convertir"
        android:onClick="onClick"

        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btn_ActualizarRatio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:id="@+id/btn_ActualizarRatio"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/btn_Convertir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/txv_Dolares_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/txv_Dolares"
        android:layout_below="@+id/edt_Euros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|numberDecimal"
        android:ems="10"
        android:id="@+id/edt_Euros"
        android:layout_below="@+id/txv_Euros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|numberDecimal"
        android:ems="10"
        android:id="@+id/edt_Dolares"
        android:layout_below="@+id/txv_Dolares"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_Euros"
        android:id="@+id/spn_SelectCountry"
        android:layout_toRightOf="@+id/edt_Euros" />
</RelativeLayout>
