<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.danielacedo.tema1.Ejercicio4Activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/ej4_CoffeeCounterTitle"
        android:id="@+id/llo_coffeeCounter">

        <TextView
            android:text="@string/txv_CoffeeCounterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_coffeeCounterTitle"
            android:textSize="20sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:textSize="20sp"
            android:text="@string/txv_CoffeeCounter_Default"
            android:id="@+id/txv_CoffeeCounter"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlo_CountDown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/llo_coffeeCounter">

        <Button
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/btn_SubtractTime" />

        <Button
            android:text="+"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_AddTime" />

        <TextView
            android:text="@string/txv_TimeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id="@+id/txv_TimeCounter" />

        <Button
            android:text="@string/btn_Pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_StartCounter"
            android:layout_toRightOf="@+id/btn_StartCounter"
            android:id="@+id/btn_Pause" />

        <Button
            android:text="@string/btn_StartCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_StartCounter"
            android:layout_below="@+id/btn_SubtractTime"
            android:layout_toRightOf="@+id/btn_SubtractTime"
            android:layout_marginLeft="11dp" />

        <Button
            android:text="@string/btn_Restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:visibility="gone"
            android:id="@+id/btn_Restart" />
    </RelativeLayout>

</RelativeLayout>
